# alloy

./: .env  .env.example  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
migrations/2024-02-06-194041_create_users/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/handlers/: post.rs  user.rs
src/middleware/: auth.rs
