[package]
name = "alloy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json", "serde_json", "uuid"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0.196", features = ["derive"] }
chrono = "0.4.33"
bcrypt = "0.15.0"
rocket-jwt = "0.5.2"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
